2 April 2015: Wouter
	- Made log message more consistent, changed 'axfr refused' log message
	  to be more consistent with other messages.

31 March 2015: Wouter
	- Tag 4.1.2rc1.

24 March 2015: Wouter
	- Fix #654: Fix contradiction in notify logging verbosity level.
	- Incoming notifies have serial number logged (at verbosity 1).
	- Fix #655: Fix contradiction in verbosity for zone transfers.

17 March 2015: Wouter
	- Use reallocarray for integer overflow protection, patch submitted
	  by Loganaden Velvindron.
	- Fix allocation integer overflow checks.

13 March 2015: Wouter
	- Fix buffer overflow in config parse of domain name,
	  reported by John Van de Meulebrouck Brendgard.

12 March 2015: Wouter
	- Updated default keylength in nsd-control-setup to 3k.

10 March 2015: Wouter
	- Fix use after free after zonefile syntax error followed by ttl
	  or origin directive, reported by John Van de Meulebrouck Brendgard.
	- Fix syntax error followed by too many TXT elements parse crash
	  reported by John Van de Meulebrouck Brendgard.

9 March 2015: Wouter
	- Fix origin directive from unused old value and subdomain parser
	  failure, reported by John Van de Meulebrouck Brendgard.

2 March 2015: Wouter
	- Fix b64pton out of bounds error on invalid zonefile input
	  reported by John Van de Meulebrouck Brendgard.

20 February 2015: Wouter
	- Fix segfault on double origin in zone reader (thanks John Van de
	  Meulebrouck Brendgard).

19 February 2015: Wouter
	- Remove dead code domain_table_iterate.
	- Fix segfault in zone reader on invalid input
	  reported by John Van de Meulebrouck Brendgard.

5 February 2015: Wouter
	- Fix #642: Change 'zone read with no errors' to '.. with success'.
	  Patch from Benedikt Heine.

3 February 2015: Wouter
	- Tag 4.1.1 release
	- Trunk is 4.1.2 in development.
	- Remove some duplicate header includes (from Brad Smith).
	- Fix tcp waiting list for zone transfers where the bind and connect
	  calls fail.

29 January 2015: Wouter